app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bookinfo-queue-limit
  namespace: bookinfo
spec:
  inFlightReq:
    amount: 75 #Drop the 75th request
